# credential-helper-rust

./: Cargo.toml
credentialhelper/: Cargo.toml
credentialhelper/src/: client.rs  credential_helper.rs  lib.rs  protocol.rs
credentialhelper/tests/: protocol_test.rs
credentialhelpercache/: Cargo.toml
credentialhelpercache/src/: lib.rs
credentialhelpercache/tests/: caching.rs
