[workspace]
resolver = "2"
members = [
  "credentialhelper",
  "credentialhelpercache",
]

[workspace.package]

# LINT.IfChange(homepage)
homepage = "https://github.com/EngFlow/credential-helper-rust"
# LINT.ThenChange(
#   //first_party/engflow-credential-helper-rust/credentialhelper/Cargo.toml:homepage,
#   //first_party/engflow-credential-helper-rust/credentialhelpercache/Cargo.toml:homepage)

# LINT.IfChange(repository)
repository = "https://github.com/EngFlow/credential-helper-rust"
# LINT.ThenChange(
#   //first_party/engflow-credential-helper-rust/credentialhelper/Cargo.toml:repository,
#   //first_party/engflow-credential-helper-rust/credentialhelpercache/Cargo.toml:repository)

# LINT.IfChange(authors)
authors = [
    "EngFlow",
]
# LINT.ThenChange(
#   //first_party/engflow-credential-helper-rust/credentialhelper/Cargo.toml:authors,
#   //first_party/engflow-credential-helper-rust/credentialhelpercache/Cargo.toml:authors)

# LINT.IfChange(version)
version = "1.0.0"
# LINT.ThenChange(
#   //first_party/engflow-credential-helper-rust/credentialhelper/Cargo.toml:version,
#   //first_party/engflow-credential-helper-rust/credentialhelpercache/Cargo.toml:version)

# LINT.IfChange(license)
license = "Apache-2.0"
# LINT.ThenChange(
#   //first_party/engflow-credential-helper-rust/credentialhelper/Cargo.toml:license,
#   //first_party/engflow-credential-helper-rust/credentialhelpercache/Cargo.toml:license)

edition = "2021"
rust-version = "1.79.0"
