[package]
name = "credentialhelpercache"
version.workspace = true
description = "Credential Helper library for Rust"
documentation = "https://docs.rs/credentialhelper"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
credentialhelper.version = "1.0.0"
credentialhelper.path = "../credentialhelper"

moka.version = "0.12"
moka.features = [
    "sync",
]
